# bsc_trade_history

./: README.md  READMEcn.md
client/: package-lock.json  package.json  vue.config.js
client/src/: main.js
client/src/components/: History.vue  HistoryDemo.vue
client/src/router/: index.js
server/: app.py  bsc.py  config.py  demo_data.py  four_byte.py  history_parser.py  known_contract.json  parse_receipt_slave.py  pyproject.toml
server/abi/: __init__.py
