[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jerry"]

[tool.poetry.dependencies]
python = "^3.7.10"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
web3 = "^5.24.0"
loguru = "^0.5.3"
requests = "^2.26.0"
pycoingecko = "^2.2.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
